<resources>
    <string name="app_name">Tienda Virtual</string>
    <string name="editar_usuario">Ingresa el usuario</string>
    <string name="editar_contraseña">Ingresa la contraseña</string>
    <string name="etiqueta_contraseña">Contraseña:</string>
    <string name="etiqueta_usuario">Usuario:</string>
    <string name="boton_aceptar">Entrar</string>
    <string name="radioB1">Cliente</string>
    <string name="radioB2">Administrador</string>
    <string name="etiqueta_tipoUsu">Tipo de usuario:</string>
    <string name="etiqueta_nombreCliente">UsuarioCliente</string>
    <string name="boton_salir">Cerrar sesión</string>
    <string name="boton_Hpedido">Hacer pedido</string>
    <string name="boton_Vpedido">Ver pedidos</string>
    <string name="boton_Vcompras">Ver compras</string>
    <string name="imagenCliente">ImagenCliente</string>
    <string name="etiqueta_cantidad">Cantidad del producto:</string>
    <string name="boton_siguiente">Siguiente</string>
    <string name="etiqueta_categoria">Selecciona una categoría:</string>
    <string name="etiqueta_productos">Selecciona el producto:</string>
    <string name="etiqueta_direccion">Dirección de envío:</string>
    <string name="etiqueta_cp">Código postal:</string>
    <string name="etiqueta_ciudad">Ciudad:</string>
    <string name="editar_dirección">Introduzca la dirección</string>
    <string name="editar_ciudad">Introduce la ciudad</string>
    <string name="boton_finalizar">Finalizar</string>
    <string name="editar_cp">Introduce el CP</string>
    <string name="etiqueta_TituloVerPed">Pedidos en trámite</string>
    <string name="etiqueta_VerComp">Compras realizadas</string>
    <string name="etiqueta_nombreAdmin">José Miguel Catalá Ramírez</string>
    <string name="boton_confirmar">Confirmar</string>
    <string name="etiqueta_nombreU">Nombre:</string>
    <string name="etiqueta_EmailU">Email:</string>
    <string name="editar_nombreU">Introduce el nombre</string>
    <string name="editar_apellidos">Introduce los apellidos</string>
    <string name="editar_emailU">Introduce el email</string>
    <string name="etiqueta_apellidosU">Apellidos:</string>
    <string name="etiqueta_pedido">Pedido:</string>
    <string name="etiqueta_contenido_pedido">contenido pedido</string>
    <string name="etiqueta_direccion_pedido">dirección del pedido</string>
    <string name="boton_pedidos_tramite">Pedidos en trámite</string>
    <string name="boton_pedidos_rechazados">Pedidos rechazados</string>
    <string name="boton_pedidos_aceptados">Pedidos confirmados</string>
    <string name="boton_rechazar">Rechazar</string>
</resources>
